# Lime

./: Cargo.toml
src/: main.rs
src/core/: citrus.rs  constants.rs  mod.rs  shaders.rs  util.rs
src/main/java/io/github/hydos/example/: LegacyVulkanExample.java  VulkanExample.java
src/main/java/io/github/hydos/legacylime/core/core/: ModelManager.java
src/main/java/io/github/hydos/legacylime/core/io/: Window.java
src/main/java/io/github/hydos/legacylime/core/math/: CitrusMath.java
src/main/java/io/github/hydos/legacylime/core/player/: PlayerController.java
src/main/java/io/github/hydos/legacylime/core/render/: RenderObject.java  Renderer.java
src/main/java/io/github/hydos/legacylime/core/ui/: GuiElement.java  GuiManager.java
src/main/java/io/github/hydos/legacylime/impl/vulkan/: Variables.java  VulkanError.java  VulkanManager.java  VulkanReg.java
src/main/java/io/github/hydos/legacylime/impl/vulkan/device/: DeviceManager.java
src/main/java/io/github/hydos/legacylime/impl/vulkan/elements/: TexturedVulkanRenderObject.java  VulkanRenderObject.java
src/main/java/io/github/hydos/legacylime/impl/vulkan/io/: VKWindow.java
src/main/java/io/github/hydos/legacylime/impl/vulkan/render/: Frame.java  (+1 more)
src/main/java/io/github/hydos/lime/: LimeManager.java  VulkanDevice.java  VulkanError.java  VulkanSwapchain.java
src/main/java/io/github/hydos/lime/other/: LowLevelLimeException.java  MathHelper.java  ValidationLayerManager.java  VulkanError.java  Window.java
src/main/java/io/github/hydos/lime/resource/: Resource.java  ResourceHandler.java
src/res/: frag.glsl
(+22 files in other folders)
