[package]
name = "Citrus"
version = "0.1.0"
authors = ["hydos <haydenv06@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.19.0"
vulkano-shaders = "0.19.0"
winit = "0.22"
vulkano-win = "0.19.0"

assimp = "0.3.1"

cgmath = "0.17"
png = "0.15.0"
time = "0.1.38"
